--- a/configs/parameters/cross_sections.yaml
+++ b/configs/parameters/cross_sections.yaml
@@ -16,12 +16,11 @@ cross_sections:
     '2016': 1.77
     '2017': 2.04
     '2018': 2.03
-  # dy_m105_160_amc: 47.17
-  dy_m105_160_vbf_amc: 2.03 # temporary write in for 2018 value. In the future, I think I need to rewrite this yml structure
-  # dy_m105_160_vbf_amc:
-  #   '2016': 1.77
-  #   '2017': 2.04
-  #   '2018': 2.03
+  dy_m105_160_amc: 47.17
+  dy_m105_160_vbf_amc:
+    '2016': 1.77
+    '2017': 2.04
+    '2018': 2.03
   ewk_lljj_mll105_160:
     '2016': 0.0508896
     '2017': 0.0508896
@@ -43,22 +42,29 @@ cross_sections:
   st_top: 136.02
   st_t_top: 3.4
   st_t_antitop: 80.95
-  st_tw_top: 32.51
-  st_tw_antitop: 32.45
+  # st_tw_top: 32.51
+  # st_tw_antitop: 32.45
+  st_tw_top: 35.85 # rereco
+  st_tw_antitop: 35.85 # rereco
   ttjets_dl: 86.65
   ttjets_sl: 358.57
-  ww_2l2nu: 11.09
-  wz_3lnu: 5.22
-  wz_2l2q: 6.45
-  wz_1l1nu2q: 9.12
-  zz: 12.17
+  # ww_2l2nu: 11.09
+  # wz_3lnu: 5.22
+  # wz_2l2q: 6.45
+  # wz_1l1nu2q: 9.12
+  # zz: 12.17
+  ww_2l2nu: 12.178 # rereco
+  wz_3lnu: 4.102 # rereco
+  wz_2l2q: 5.606 # rereco
+  wz_1l1nu2q: 7.031227 # rereco
+  zz: 0.5664 # rereco
   ttw: 0.2001
   ttz: 0.2529
   www: 0.2086
   wwz: 0.1651
   wzz: 0.05565
   zzz: 0.01398
-  ggh_powheg: 0.01057
+  # ggh_powheg: 0.01057
   ggh_powhegPS: 0.01057
   ggh_amcPS: 0.01057
   ggh_amcPS_TuneCP5down: 0.01057
@@ -67,7 +73,7 @@ cross_sections:
   ggh_localTest: 0.01057
   vbf: 0.0008210722
   vbf_sync: 0.0008210722
-  vbf_powheg: 0.0008210722
+  # vbf_powheg: 0.0008210722
   vbf_powheg_herwig: 0.0008210722
   vbf_powheg_dipole: 0.0008210722
   vbf_powhegPS: 0.0008210722
