--- a/configs/parameters/jet.yaml
+++ b/configs/parameters/jet.yaml
@@ -48,27 +48,21 @@ min_dr_mu_jet:
   '2018_RERECO': 0.4
   2022preEE: 0.4
   2022postEE: 0.4
-btag_loose_wp:
+btag_loose_wp: # for DeepCSV, DeepJet is different
   2016preVFP: 0.2027
   2016postVFP: 0.1918
   '2017': 0.1355
-  '2018': 0.049
-  #2016_RERECO: 0.2219
-  #'2017_RERECO': 0.1522
-  #'2018_RERECO': 0.1241 
-  2016_RERECO: 0.2217
+  '2018': 0.1208 # central sources for UL https://btv-wiki.docs.cern.ch/ScaleFactors/UL2018/#ak4-b-tagging
+  2016_RERECO: 0.2217  #central sources for RERECO https://twiki.cern.ch/twiki/bin/viewauth/CMS/BtagRecommendation102X
   '2017_RERECO': 0.1522
   '2018_RERECO': 0.1241 
   2022preEE: 0.12
   2022postEE: 0.12
-btag_medium_wp:
+btag_medium_wp: # for DeepCSV, DeepJet is different
   2016preVFP: 0.6001
   2016postVFP: 0.5847
   '2017': 0.4506
   '2018': 0.4168
-  # 2016_RERECO: 0.6324
-  # '2017_RERECO': 0.4941
-  # '2018_RERECO': 0.4184
   2016_RERECO: 0.6321
   '2017_RERECO': 0.4941
   '2018_RERECO': 0.4184
