--- a/data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
@@ -104,3 +104,39 @@
       polynomial_range:
         x_min: 0
         x_max: 50
+'2017':
+  njet_2:
+    50:
+      p0: 0.37554095953218203
+      p0_err: 0.7199945283676131
+      p1: 0.07609692056927785
+      p1_err: 0.10074713490124487
+      p2: -0.0036884051161083825
+      p2_err: 0.004544629965615737
+      p3: 7.313460130205285e-05
+      p3_err: 0.00010577403207411231
+      p4: -5.041291552215182e-07
+      p4_err: 1.0454412681298385e-06
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.9739169747959004
+      polynomial_range:
+        x_min: 0
+        x_max: 60
+    100:
+      p0: 0.3870780797799658
+      p0_err: 0.5037555776764187
+      p1: 0.07336457293601956
+      p1_err: 0.07403957660853874
+      p2: -0.003505753635401369
+      p2_err: 0.003625083725415538
+      p3: 6.863976266564521e-05
+      p3_err: 8.68822482721338e-05
+      p4: -4.676502336059898e-07
+      p4_err: 8.255623979914246e-07
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.9726935691590864
+      polynomial_range:
+        x_min: 0
+        x_max: 60
