done with 2016pre

--- a/data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
@@ -316,3 +316,109 @@
       polynomial_range:
         x_min: 0
         x_max: 50
+2016preVFP:
+  njet_0:
+    50:
+      p0: 0.6841221064575291
+      p0_err: 0.8257410950119893
+      p1: 0.0679212999173672
+      p1_err: 0.09833793692346564
+      p2: -0.003606952496891904
+      p2_err: 0.004006804645659056
+      p3: 7.218837464064839e-05
+      p3_err: 8.019473664517979e-05
+      p4: -4.5729671144670615e-07
+      p4_err: 6.356933101913131e-07
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 1.596792751064333
+      polynomial_range:
+        x_min: 0
+        x_max: 70
+    100:
+      p0: 0.6814569601748148
+      p0_err: 0.5905950861062527
+      p1: 0.07004389572676134
+      p1_err: 0.07558680366660854
+      p2: -0.0037966719830685165
+      p2_err: 0.0033662498139778374
+      p3: 7.748030778927459e-05
+      p3_err: 7.043584503107384e-05
+      p4: -5.026485700169827e-07
+      p4_err: 5.589910493377001e-07
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 1.5301532661509094
+      polynomial_range:
+        x_min: 0
+        x_max: 70
+  njet_1:
+    50:
+      p0: 0.5366774954486512
+      p0_err: 0.8486312544386938
+      p1: 0.10633946422018649
+      p1_err: 0.1178411904592224
+      p2: -0.006395808611673729
+      p2_err: 0.0053484208378466475
+      p3: 0.00013940353785783514
+      p3_err: 0.000130193772969509
+      p4: -1.017616033494064e-06
+      p4_err: 1.3980442379487178e-06
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.9593370277642091
+      polynomial_range:
+        x_min: 0
+        x_max: 55
+    100:
+      p0: 0.5576112699864415
+      p0_err: 0.5967441336044079
+      p1: 0.10124826298001516
+      p1_err: 0.08677462451341936
+      p2: -0.00604421727880556
+      p2_err: 0.004272156749792284
+      p3: 0.0001303304501049356
+      p3_err: 0.00010705655435338824
+      p4: -9.396535168802351e-07
+      p4_err: 1.0991971209564873e-06
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.9575946157908114
+      polynomial_range:
+        x_min: 0
+        x_max: 55
+  njet_2:
+    50:
+      p0: 0.5588471869485235
+      p0_err: 0.8354559613671978
+      p1: 0.07315006800284875
+      p1_err: 0.11877827565593092
+      p2: -0.004089481900051461
+      p2_err: 0.005518450771440397
+      p3: 8.884138677265698e-05
+      p3_err: 0.0001356158229696917
+      p4: -6.580292240230922e-07
+      p4_err: 1.4458039443324904e-06
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.998548764017923
+      polynomial_range:
+        x_min: 0
+        x_max: 55
+    100:
+      p0: 0.5514798366543266
+      p0_err: 0.5860564169695314
+      p1: 0.07385916983481587
+      p1_err: 0.08761669470334821
+      p2: -0.0040896727976166
+      p2_err: 0.004415510648344736
+      p3: 8.798980372537335e-05
+      p3_err: 0.00011159400120978455
+      p4: -6.452611113333778e-07
+      p4_err: 1.1396522160043253e-06
+      p5: 0.0
+      p5_err: 0.0
+      horizontal_c0: 0.9971331866716304
+      polynomial_range:
+        x_min: 0
+        x_max: 55
