Freeze: results for V2_Jan27_JecDefault_TrigMatchFixed_NoHlt (same as V2_Jan27_JecDefault_TrigMatchFixed_24Or27_EcalGapEleReject_isGlobalOrTracker, but HLT removed and pt threshold changed back)

--- a/configs/parameters/trigger.yaml
+++ b/configs/parameters/trigger.yaml
@@ -7,10 +7,10 @@ hlt:
   - IsoTkMu24
   '2017':
   - IsoMu27
-  - IsoMu24
+  # - IsoMu24
   '2018':
   - IsoMu24
-  - IsoMu27
+  # - IsoMu27
   2016_RERECO:
   - IsoMu24
   - IsoTkMu24
