--- a/configs/parameters/SF_filelist.yaml
+++ b/configs/parameters/SF_filelist.yaml
@@ -199,11 +199,24 @@ muSFFileList:
     - IsoMu27_PtEtaBins/efficienciesMC/abseta_pt_MC
     scale: 1.0
 zpt_weights_file:
-  2016preVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root
-  2016postVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root
-  '2017': data/reweight_zpt_2018_nJetBinned_new.histo.root
+  # 2016preVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
+  # 2016postVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
+  2016preVFP: data/zpt_weights.histo.json # Dmitry's zpt
+  2016postVFP: data/zpt_weights.histo.json # Dmitry's zpt
+  # '2017': data/reweight_zpt_2018_nJetBinned_new.histo.root
+  '2017': data/zpt_weights.histo.json # Dmitry's zpt
   # '2018': data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
   '2018': data/zpt_weights.histo.json # Dmitry's zpt
+zpt_weights_file_valerie:
+  2016preVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
+  2016postVFP: data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
+  '2017': data/reweight_zpt_2018_nJetBinned_new.histo.root
+  '2018': data/reweight_zpt_2018_nJetBinned_new.histo.root # Valerie's zpt
+new_zpt_weights_file:
+  2016preVFP: data/zpt_rewgt/ZptReWgt_2016preVFPUL.json # New zpt rewgt Jan 09 2025
+  2016postVFP: data/zpt_rewgt/ZptReWgt_2016postVFPUL.json # New zpt rewgt Jan 09 2025
+  '2017': data/zpt_rewgt/ZptReWgt_2017UL.json # New zpt rewgt Jan 09 2025
+  '2018': data/zpt_rewgt/ZptReWgt_2018UL.json # New zpt rewgt Jan 09 2025
   2016_RERECO: data/zpt_weights.histo.json
   '2017_RERECO': data/zpt_weights.histo.json
   '2018_RERECO': data/zpt_weights.histo.json
