- Update .gitignore - remove obsolete goodnessOfFit plots - First running version of the ZpT fitting code

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .ipynb_checkpoints/
+*.csv
 __pycache__/
-prestage_output/
-*.parquet
 voms_proxy.txt
 *.html
 .sites*.json
+prestage_output/
+*.parquet
 *.root
 *.pdf
 *.png
-log*.txt
 *.txt
+*.ps
