--- a/configs/parameters/lumi.yaml
+++ b/configs/parameters/lumi.yaml
@@ -3,7 +3,7 @@ integrated_lumis: # source: https://github.com/TopEFT/topeft/blob/252c6454e06e49
   2016postVFP: 16810.0
   '2017': 41480.0
   '2018': 59830.0
-  2022preEE: 59970.0
+  2022preEE: 7980.4
   2022postEE: 59970.0
   2016_RERECO: 35920.0
   2017_RERECO: 41529.0
@@ -13,8 +13,9 @@ lumimask:
   2016postVFP: data/lumimasks/Cert_271036-284044_13TeV_Legacy2016_Collisions16_JSON.txt
   '2017': data/lumimasks/Cert_294927-306462_13TeV_UL2017_Collisions17_GoldenJSON.txt
   '2018': data/lumimasks/Cert_314472-325175_13TeV_Legacy2018_Collisions18_JSON.txt
-  2022preEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json
-  2022postEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json
+  2022preEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json # source: https://cms-service-dqmdc.web.cern.ch/CAF/certification/Collisions22/Cert_Collisions2022_355100_362760_Golden.json
+  2022postEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json # source: https://cms-service-dqmdc.web.cern.ch/CAF/certification/Collisions22/Cert_Collisions2022_355100_362760_Golden.json
+  '2023': data/lumimasks/Cert_Collisions2023_366442_370790_Golden.json # source: https://cms-service-dqmdc.web.cern.ch/CAF/certification/Collisions23/Cert_Collisions2023_366442_370790_Golden.json
   2016_RERECO: data/lumimasks/RERECO/Cert_271036-284044_13TeV_ReReco_07Aug2017_Collisions16_JSON.txt # RERECO source https://twiki.cern.ch/twiki/bin/viewauth/CMS/DCUserPage#Early2018Re_Reco_datasets_17Sep2 and https://twiki.cern.ch/twiki/bin/view/CMS/BtagRecommendation
   '2017_RERECO': data/lumimasks/RERECO/Cert_294927-306462_13TeV_EOY2017ReReco_Collisions17_JSON_v1.txt
   '2018_RERECO': data/lumimasks/RERECO/Cert_314472-325175_13TeV_17SeptEarlyReReco2018ABC_PromptEraD_Collisions18_JSON.txt
